--- a/Materi.html
+++ b/Materi.html
@@ -221,8 +221,8 @@
                   <li><a href="Materi.html">Integrasi Numeric </a></li>
                   <li><a href="MenemukanError.html">Galat dan Penyelesaian</a></li>
                   <li><a href="PersamaanNonLinier.html">persamaan Non Linier </a></li>
-                  <li><a href="#">Persamaan Linier </a></li>
-                  <li><a href="#">Persamaan Diferensial</a></li>
+                  <li><a href="PersamaanLinier.html">Persamaan Linier </a></li>
+                  <li><a href="PersamaanDiferensial.html">Persamaan Diferensial</a></li>
                 </ul>
               </div><!-- End sidebar categories-->
 
