--- a/MenemukanError.html
+++ b/MenemukanError.html
@@ -54,8 +54,8 @@
               <li><a href="Materi.html">Integrasi Numeric</a></li>
               <li><a href="MenemukanError.html">Galat dan Penyelesaian </a></li>
               <li><a href="PersamaanNonLinier.html">Persamaan Non Linier</a></li>
-              <li><a href="#">Persamaan Linear</a></li>
-              <li><a href="#">Persamaan Difrensial</a></li>
+              <li><a href="PersamaanLinier.html">Persamaan Linear</a></li>
+              <li><a href="PersamaanDiferensial.html">Persamaan Difrensial</a></li>
             </ul>
           </li>
         </ul>
@@ -248,8 +248,8 @@
                   <li><a href="Materi.html">Integrasi Numeric </a></li>
                   <li><a href="MenemukanError.html">Galat dan Penyelesaian</a></li>
                   <li><a href="PersamaanNonLinier.html">persamaan Non Linier </a></li>
-                  <li><a href="#">Persamaan Linier </a></li>
-                  <li><a href="#">Persamaan Diferensial</a></li>
+                  <li><a href="PersamaanLinier.html">Persamaan Linier </a></li>
+                  <li><a href="PersamaanDiferensial.html">Persamaan Diferensial</a></li>
                 </ul>
               </div><!-- End sidebar categories-->
 
