update persaamn linear

--- a/PersamaanLinier.html
+++ b/PersamaanLinier.html
@@ -282,7 +282,7 @@
         &copy; 190411100027 <strong><span>Zaka Fahmi</span></strong>. Komputasi Numeric A
       </div>
       <div class="credits">
-        Githab <a href="https://github.com/Msalisianto190027">Zaka Fahmi</a>
+        Githab <a href="https://github.com/ZakaFahmi">Zaka Fahmi</a>
       </div>
     </div>
   </footer><!-- End Footer -->
