--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">Komputasi Nomeric A</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Nim :190411100027 <br> Nama :M.salisianto Fahmi Zaka</h2>
+          <h2 data-aos="fade-up" data-aos-delay="400">Komputasi numerik merupakan metode numerik yang memanfaatkan program 
+            komputer untuk melakukan iterasi perhitungan umerik yang terkadang rumit.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
           </div>
         </div>
