--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Komputasi Nomeric A</h1>
+          <h1 data-aos="fade-up">Komputasi Nomeric </h1>
           <h2 data-aos="fade-up" data-aos-delay="400">Komputasi numerik merupakan metode numerik yang memanfaatkan program 
             komputer untuk melakukan iterasi perhitungan umerik yang terkadang rumit.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
@@ -86,7 +86,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; 190411100027 <strong><span>Zaka Fahmi</span></strong>. Komputasi Numeric A
+        &copy; 190411100027 <strong><span>Zaka Fahmi</span></strong>. Komputasi Numeric 
       </div>
       <div class="credits">
         Githab <a href="https://github.com/ZakaFahmi">Zaka Fahmi</a>
