--- a/PersamaanDiferensial.html
+++ b/PersamaanDiferensial.html
@@ -59,6 +59,7 @@
               <li><a href="PersamaanDiferensial.html">Persamaan Difrensial</a></li>
             </ul>
           </li>
+          <li><a class="nav-link scrollto active" href="https://gabut-it.github.io/">GabutIT</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
